Thu Sep 16 00:54:31 BST 2004  Olly Betts <olly@survex.com>

	* scriptindex.cc: --version now actually reports the version.  --help
	  now exits with status 0 rather than status 1.

Tue Sep 14 03:00:32 BST 2004  Olly Betts <olly@survex.com>

	* omega.spec.in: Updated URL for sources; include htdig2omega and
	  htdig2omega.script in the RPM.

Tue Sep 14 02:56:52 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Install htdig2omega.script in ${prefix}/share/omega/
	  rather than ${prefix}/share/.

Mon Sep 13 03:22:55 BST 2004  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Version 0.8.2.

Thu Sep 09 15:11:45 BST 2004  Olly Betts <olly@survex.com>

	* NEWS: Updated.

Thu Sep 09 14:41:41 BST 2004  Olly Betts <olly@survex.com>

	* query.cc: Use new checkatleast parameter to Enquire::get_mset to
	  implement MINHITS.

Thu Sep 02 01:45:46 BST 2004  Olly Betts <olly@survex.com>

	* templates/query: Always report database not found - previously we
	  only did so if there was a query.  Also fixed missing </center>
	  tag which happened in certain cases.

Wed Aug 25 23:19:47 BST 2004  Olly Betts <olly@survex.com>

	* omindex.cc: When running with "replace duplicates" mode (the
	  default), detect documents removed since the last indexing
	  run and delete them from the database (bug #34).

Tue Aug 24 19:23:55 BST 2004  Olly Betts <olly@survex.com>

	* omega.cc: Added FIXME comment noting that SORT and SORTBANDS should
	  be tracked and the results reset to the first page if they change.

Tue Aug 24 19:23:07 BST 2004  Olly Betts <olly@survex.com>

	* Makefile.am: Install htdig2omega and htdig2omega.script.

Mon Aug 23 22:29:53 BST 2004  Olly Betts <olly@survex.com>

	* scriptindex.cc: Report index file name and line number when
	  reporting errors in it.  Added warning for redundant actions,
	  such as "truncate" as the last action in a rule.

Mon Aug 23 22:03:25 BST 2004  Olly Betts <olly@survex.com>

	* omindex.cc: Use the new replace_document(term, doc) method.
