@@ -23,6 +23,8 @@
  * -----END-LICENCE-----
  */
 
+#include <config.h>
+
 #include <assert.h>
 #include <stdio.h>
 #include <time.h>
